--- a/labs4tsp.vcxproj.filters
+++ b/labs4tsp.vcxproj.filters
@@ -48,6 +48,21 @@
     <ClCompile Include="lab3\3_3\sea.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="lab5\5_1\division.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="lab5\5_2\IndexLowerException.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="lab5\5_2\IndexOutOfRangeException.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="lab5\5_2\IndexUpperException.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="lab5\5_3\EmptySetException.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lab1\1_1\triangle.h">
@@ -78,6 +93,18 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="lab3\3_3\bay.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="lab5\5_2\IndexLowerException.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="lab5\5_2\IndexUpperException.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="lab5\5_2\IndexOutOfRangeException.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="lab5\5_3\EmptySetException.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
